# TeleClaude

./: .cspell.json  .env.sample  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  .rsyncignore  .venv  AGENTS.master.md  AGENTS.md  AGENTS.override.md  CLAUDE.md  DOCS_REFACTOR_PLAN.md  MIGRATION_CHECKLIST.md  Makefile  README-2.md  README-3.md  README.md  VOICE_IMPLEMENTATION.md  alembic.ini  analysis_exit_marker_simplification.md  bugs.md  color-variations.html  config.example.yml  config.sample.yml  config.yml.sample  cookies.txt  docker-compose.alpha.yml  docker-compose.sandbox.yml  experiments.yml  generate_art.py  install.sh  mcp.json  migrate_state_files.py  package.json  pnpm-lock.yaml  pyproject.toml  pyrightconfig.json  refactoring_impact_analysis.md  requirements-test.txt  (+12 more)
.claude/: settings.json
.githooks/: pre-push
.teleclaude/: worktree-prep-state.json
.tmp/: delivered_slugs.txt  demo_recovery_report_20260224_213309.txt  demo_recovery_report_20260224_213324.txt  demo_recovery_report_20260224_213352_bash.txt
adr/: 0001-precommit-stash-prevention.md
agents/: AGENTS.global.md  AGENTS.master.md  AGENTS.md  CLAUDE.addendum.md  CLAUDE.primer.md  CODEX.addendum.md  CODEX.primer.md  GEMINI.addendum.md  GEMINI.primer.md  PREFIX.claude.md  PREFIX.codex.md  PREFIX.gemini.md
alembic/: README.md  env.py
company/: __init__.py
config/: ai.instrukt.teleclaude.daemon.plist.template  voices.example.json
cron/: __init__.py  youtube-sync-subscriptions.py
docker/alpha-runner/: Dockerfile  pyproject.toml
docs/: REFACTORING_SUMMARY.md  TEST_COVERAGE_IMPROVEMENTS.md  ai-to-ai-protocol.md  api-reliability-analysis.md  api.md  architecture.md  cache.md  contributing.md  definition-of-done.md  exit-markers.md  index.md  index.yaml  invariants.md  mcp-architecture.md  modeling.md  multi-computer-setup.md  protocol-architecture.md  rest-api.md  rest-reliability-analysis.md  rsync-workflow.md  string-compare-audit.md  troubleshooting.md  tui-data-requirements.md  use_cases.md  workflow-commands.md
docs-3rd/: claude-code.md  codex.md  gemini.md  index.md
docs-legacy/: REFACTORING_SUMMARY.md  ai-to-ai-protocol.md  cache.md  contributing.md  definition-of-done.md  index.md  invariants.md  protocol-architecture.md  troubleshooting.md  tui-data-requirements.md  use_cases.md
docs-v2/: architecture.md  invariants.md  use_cases.md
frontend/: .env.example  .gitignore  AGENTS.master.md  GEMINI.md  THEMING-PLAN.md  auth.ts  drizzle.config.ts  instrumentation.ts  middleware.ts  next.config.ts  package.json  pnpm-lock.yaml  server.ts  tsconfig.cli.json  vitest.cli.config.ts
help-desk/: README.md
ideas/: 20260219-artifact-consistency-guards.md  20260219-daemon-decoupling-friction.md  20260219-daemon-restart-validation.md  20260219-session-state-clarity.md  250219-ai-agent-discipline-consolidation.md  250219-code-quality-linting-enforcement.md  250219-infrastructure-reliability-automation.md  250219-lifelog-staleness.md  260208-inline-bugs-paradigm.md  260209-memory-review-job.md  260209-scraper-to-docs-pipeline.md  260219-agent-execution-philosophy-unification.md  260219-codex-observability-doc.md  260219-codex-session-observability-carve-out.md  260219-consolidate-agent-communication-discipline.md  260219-daemon-restart-protocol.md  260219-decouple-get-context-from-mcp.md  260219-documentation-enforcement-mechanism.md  260219-infrastructure-decoupling-get-context.md  260219-infrastructure-resilience-incident-pattern.md  260219-job-architecture-migration.md  260219-session-lifecycle-spec.md  260220-agent-execution-philosophy-unification.md  260220-artifact-state-clarity.md  260220-daemon-crash-recovery.md  260220-daemon-restart-discipline.md  260220-daemon-restart-protocol.md  260220-daemon-stability-carve-out.md  260220-decouple-get-context-from-mcp.md  260220-documentation-enforcement-mechanism.md  260220-execution-discipline-consolidation.md  260220-execution-discipline-pattern.md  260220-generated-artifact-discovery.md  260220-get-context-mcp-decoupling.md  260220-infrastructure-gotchas.md  260220-infrastructure-ops-runbook.md  260220-infrastructure-resilience-carve-out.md  260220-infrastructure-resilience-incident-pattern.md  260220-infrastructure-resilience-pattern.md  260220-lifelog-staleness-gap.md  (+13 more)
jobs/: __init__.py  base.py  help_desk_intelligence.py  help_desk_session_review.py  session_memory_extraction.py  youtube_scraper.py  youtube_sync_subscriptions.py
launchd/: ai.instrukt.teleclaude.cron.plist
migrations/: README.md  __init__.py
prds/: adapter-api-design.md  claude-session-native-logging.md  notifications.md  rest-api-and-mcp.md  rest-api-notification-endpoint.md  roadmap.md  session-observability-improvements.md  teleclaude.md  todo.md
publications/: README.md
reports/: claude-feedback.md
reviews/: review-bc58b33-9ce5f1e.md
scripts/: AGENTS.master.md  _telec  auto_sync.py  build_snippet_index.py  check-raw-sql.sh  cleanup_closed_session_channels.py  cleanup_stale_sessions.py  cron_runner.py  distribute.py  fetch_memory_index.py  fix_subprocess_timeouts.py  guardrails.py  history.py  install_hooks.py  l3_compress.py  l4_compress.py  l4_test.py  migrate_docs_structure.py  migrate_person_configs.py  migrate_requires.py  release_consolidator.py  relocate-workspace-paths.sh  research_docs.py  snippet_schema.yaml  sync_resources.py  sync_snippets.py  teleclaude-heartbeat-watch.sh  teleclaude-sigterm-watch.sh  teleclaude-unlink-watch.sh  test_adapter_key.py  verify_resilience.py
session_files/: .gitignore
session_output/: 0a723046.txt  0e8bc6a6.txt  0efdfeaf.txt  132fdb3b.txt  1579c47b.txt  160b6d29.txt  1c643931.txt  1d084d73.txt  25b36d28.txt  38f95d97.txt  4935deb8.txt  56daa48a.txt  56f45672.txt  5fd4a250.txt  603e46af.txt  6057d9e3.txt  6339ca04.txt  6815f396.txt  6ad1561b.txt  7547cf0d.txt  7f01ff7d.txt  91f58742.txt  9bb24543.txt  a8b40dfe.txt  b207a72c.txt  b51cdf2d.txt  b7d65c36.txt  b9b42f18.txt  da94e4b6.txt  e2ce901b.txt  f474cd3c.txt  f7991a1f.txt  f88d6e4e.txt  fd850d81.txt
teleclaude/: __init__.py  api_models.py  (+27 more)
(+6261 files in other folders)
