[build-system]
requires = ["setuptools~=69.0", "wheel~=0.42.0"]
build-backend = "setuptools.build_meta"

[project]
name = "TeleClaude"
version = "0.1.0"
license = { text = "GPL-3.0-only" }
authors = [{ name = "Maurice Faber", email = "maurice@instrukt.ai" }]
description = "Control terminal sessions on multiple computers remotely via Telegram"
readme = "README.md"
classifiers = [
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.11",
  "Typing :: Typed",
  "Topic :: Communications :: Chat",
  "Topic :: System :: Shells",
]
keywords = ["telegram", "terminal", "tmux", "remote-control"]
dynamic = ["dependencies", "optional-dependencies"]
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["teleclaude*"]

[project.urls]
homepage = "https://github.com/InstruktAI/TeleClaude"
"Source Code" = "https://github.com/InstruktAI/TeleClaude"
"Bug Tracker" = "https://github.com/InstruktAI/TeleClaude/issues"

[tool.black]
line-length = 120
preview = true
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.mypy]
# MAXIMUM STRICTNESS - No Any, no untyped dict/list, no isinstance abuse
python_version = "3.11"
files = ["**/*.py"]
exclude = ["^venv/", "^.venv/"]
follow_imports = "silent"  # TODO: Revisit - changed from "skip" to allow pydantic BaseModel resolution

# Enable ALL strict mode flags
strict = true

# Additional strictness beyond --strict (ban ALL forms of Any)
disallow_any_unimported = true  # Ban Any from missing imports
disallow_any_expr = true  # Ban Any in expressions (catches isinstance abuse)
disallow_any_decorated = true  # Ban Any from untyped decorators
disallow_any_explicit = true  # Ban explicit Any annotation

# Import handling
disable_error_code = [
  "import-untyped",  # Still allow importing untyped third-party libs
  "func-returns-value",  # Allow functions that only return None (handlers, etc.)
]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false  # Allow untyped defs in tests only

[tool.pylint.'MESSAGES CONTROL']
# CRITICAL: import-outside-toplevel (C0415) is ENABLED and will fail the build
# ALL imports MUST be at the top of the file
enable = ["import-outside-toplevel"]
fail-on = ["import-outside-toplevel"]
disable = [
  "missing-docstring",  # TODO: Consider re-enabling - add docs to complex functions
  "missing-module-docstring",  # TODO: Consider re-enabling - add module-level docs
  # Code complexity - heavy refactoring needed (TODO: Fix gradually as we touch these files)
  "too-many-return-statements",  # TODO: Reasonable for validation, review case-by-case
  "too-many-branches",  # TODO: Use dict-dispatch or strategy pattern for >12 branches (10 violations)
  "too-many-statements",  # TODO: Extract functions when >50 statements (9 violations)
  "too-many-public-methods",  # TODO: Split classes with >20 public methods (4 violations)
  "too-many-lines",  # TODO: Split modules over 1000 lines (5 violations)
  "too-many-nested-blocks",  # TODO: Extract functions to reduce nesting >5 levels (5 violations)
  "too-few-public-methods",  # Acceptable - single-method classes are valid (callables, strategies)
  # Intentional patterns (TODO: Review each periodically)
  "broad-exception-caught",  # Daemon robustness - TODO: Ensure all catch blocks log properly
  "consider-using-with",  # Lock file handle must stay open - TODO: Document each instance
  "attribute-defined-outside-init",  # Async init pattern - TODO: Verify all use async setup()
  "protected-access",  # Internal framework use - TODO: Document why needed, fragile on updates
  "redefined-outer-name",  # Function param shadowing - TODO: Review for clarity
  "no-else-return",  # Early returns - acceptable style
  "arguments-renamed",  # Override compatibility - acceptable for interface implementations
  "ungrouped-imports",  # Import order - handled by isort
  "unnecessary-ellipsis",  # Required in Protocol definitions - acceptable
  "global-statement",  # Module-level singletons - TODO: Consider dependency injection instead
  "redefined-builtin",  # type parameter shadows builtin - acceptable in type-heavy code
  "line-too-long",  # Documentation - Black handles code lines
  "unspecified-encoding",  # Default UTF-8 is fine in Python 3.11+
  "assignment-from-none",  # Optional return values - acceptable pattern
  "wrong-import-position",  # TYPE_CHECKING guards - acceptable pattern
]

[tool.pylint.'FORMAT']
max-line-length = 120

[tool.pylint.typecheck]
# Decorators that modify function signatures (inject parameters)
signature-mutators = ["teleclaude.core.command_handlers.with_session"]

[tool.pyproject-fmt]
indent = 4
keep_full_version = false
max_supported_python = "3.13"


[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
optional-dependencies = { test = { file = ["requirements-test.txt"] } }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
  "-v",
  "--strict-markers",
  "--strict-config",
  "--tb=short",
]
markers = [
  "unit: Unit tests (fast, isolated, mocked)",
  "integration: Integration tests (slower, real components)",
  "timeout: Test timeout marker",
]
asyncio_mode = "auto"
filterwarnings = [
  "ignore::telegram.warnings.PTBDeprecationWarning",
  "ignore:The default datetime adapter is deprecated:DeprecationWarning:aiosqlite",
]

[tool.coverage.run]
source = ["teleclaude"]
omit = [
  "*/tests/*",
  "*/__pycache__/*",
  "*/.venv/*",
  "*/venv/*",
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "@abstractmethod",
]

[tool.coverage.html]
directory = "coverage/html"

[tool.coverage.xml]
output = "coverage/coverage.xml"

[tool.coverage.json]
output = "coverage/coverage.json"
