[build-system]
requires = ["setuptools~=69.0", "wheel~=0.42.0"]
build-backend = "setuptools.build_meta"

[project]
name = "TeleClaude"
version = "0.2.0"
license = { text = "GPL-3.0-only" }
authors = [{ name = "Maurice Faber", email = "maurice@instrukt.ai" }]
description = "Control terminal sessions on multiple computers remotely via Telegram"
readme = "README.md"
classifiers = [
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.11",
  "Typing :: Typed",
  "Topic :: Communications :: Chat",
  "Topic :: System :: Shells",
]
keywords = ["telegram", "terminal", "tmux", "remote-control"]
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot[rate-limiter]>=22.5",
    "discord.py>=2.4.0",
    "openai>=2.6.1",
    "anthropic>=0.42.0",
    "aiosqlite>=0.21.0",
    "sqlalchemy>=2.0.0",
    "sqlmodel>=0.0.16",
    "greenlet>=3.3.0",
    "pyyaml>=6.0.3",
    "python-dotenv>=1.2.1",
    "aiofiles>=25.1.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "redis>=5.0.0",
    "psutil>=5.9.0",
    "instrukt-ai-logger @ git+https://github.com/InstruktAI/python-logger.git@v0.3.5",
    "telegramify-markdown==0.5.4",
    "GitPython>=3.1.0",
    "nest-asyncio>=1.6.0",
    "aiohttp>=3.9.0",
    "dateparser>=1.2.0",
    "youtube-transcript-api>=1.0.0",
    "munch>=4.0.0",
    "httpx>=0.28.0",
    "websockets>=12.0",
    "python-frontmatter>=1.1.0",
    "sqlalchemy>=2.0.0",
    "sqlmodel>=0.0.16",
    "greenlet>=3.3.0",
    "elevenlabs>=2.31.0",
    "watchdog>=4.0.0",
    "pathspec>=0.12.0",
    "ruamel.yaml>=0.18.0",
    "textual>=1.0.0",
    "uvloop>=0.21.0; sys_platform != 'win32'",
    "pyresidfp>=0.17.0",
    "py65emu>=0.1.0",
    "sounddevice>=0.5.0",
    "mlx-audio; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "misaki[en]; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "phonemizer-fork>=3.3.2; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "num2words; sys_platform == 'darwin' and platform_machine == 'arm64'",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.2.0",
    "pytest-xdist>=3.8.0",
    "aiohttp>=3.9.0",
    "coverage[toml]>=7.4.0",
    "ruff>=0.12.0",
    "pyright>=1.1.0",
    "pylint>=3.0.0",
    "pre-commit>=3.6.0",
    "mypy>=1.8.0",
]

[tool.uv.sources]
mlx-audio = { git = "https://github.com/Blaizzy/mlx-audio.git", branch = "main" }

[tool.setuptools.packages.find]
where = ["."]
include = ["teleclaude*", "company*"]

[project.scripts]
telec = "teleclaude.cli.telec:main"

[project.urls]
homepage = "https://github.com/InstruktAI/TeleClaude"
"Source Code" = "https://github.com/InstruktAI/TeleClaude"
"Bug Tracker" = "https://github.com/InstruktAI/TeleClaude/issues"

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = [".venv", "venv", ".mypy_cache", ".pytest_cache", "coverage"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "F",    # pyflakes
  "I",    # import sorting
  "C90",  # mccabe complexity
  "B",    # flake8-bugbear (real bugs: mutable defaults, broad exceptions, unreachable code)
  "UP",   # pyupgrade (modernize syntax for target Python version)
  "RUF",  # ruff-specific rules (unused noqa, mutable class vars, ambiguous unicode)
]
ignore = [
  "E501",   # line-too-long (formatter handles this in practice)
  "B008",   # function-call-in-default-argument — false positive on FastAPI Depends()
  "UP007",  # non-pep604-annotation — Optional[X] is still readable and widely used
  # guard: ratchet-down — temporarily ignored due to existing tech debt, re-enable as violations are fixed
  "UP042",  # replace-str-enum — 37 violations, needs StrEnum migration pass
  "RUF012", # mutable-class-default — 30 violations, needs ClassVar annotation pass
  "RUF005", # collection-literal-concatenation — 13 violations, cosmetic
  "RUF006", # asyncio-dangling-task — 9 violations, needs careful manual review
  "B905",   # zip-without-explicit-strict — 9 violations, needs review
]
extend-select = [
  "F403", # import * used; unable to detect undefined names
  "F405", # name may be undefined, or defined from star imports
]

[tool.ruff.lint.mccabe]
max-complexity = 20

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B018", "F841", "E402"]  # Allow unused variables and sys.path imports in tests
"scripts/**" = ["E402"]  # Scripts need sys.path manipulation before imports
"jobs/**" = ["E402"]  # Jobs need sys.path manipulation before imports
"cron/**" = ["E402"]  # Cron entrypoints need sys.path manipulation before imports
"teleclaude/helpers/agent_cli.py" = ["E402"]  # Needs sys.path for standalone execution
# guard: ratchet-down — existing complexity violations, must decompose over time
"teleclaude/api_server.py" = ["C901"]
"teleclaude/cli/telec/**" = ["C901", "B904", "E402"]
"teleclaude/cli/cartridge_cli.py" = ["C901"]
"teleclaude/cli/tui/state.py" = ["C901"]
"teleclaude/cli/tui/pane_manager.py" = ["C901"]
"teleclaude/cli/tui/pane_layout.py" = ["C901"]
"teleclaude/cli/tui/animations/base.py" = ["C901", "RUF001", "RUF002", "RUF003"]
"teleclaude/cli/tui/widgets/banner.py" = ["C901"]
"teleclaude/cli/tui/widgets/box_tab_bar.py" = ["C901"]
"teleclaude/context_selector.py" = ["C901"]
"teleclaude/core/agent_coordinator.py" = ["C901"]
"teleclaude/core/command_handlers.py" = ["C901"]
"teleclaude/core/next_machine/core.py" = ["C901"]
"teleclaude/core/output_poller.py" = ["C901"]
"teleclaude/core/roadmap.py" = ["C901"]
"teleclaude/cron/runner.py" = ["C901"]
"teleclaude/daemon.py" = ["C901"]
"teleclaude/daemon_hook_outbox.py" = ["C901"]
"teleclaude/daemon_session.py" = ["C901"]
"teleclaude/daemon_event_platform.py" = ["C901"]
"teleclaude/api/sessions_routes.py" = ["C901"]
"teleclaude/api/sessions_actions_routes.py" = ["C901"]
"teleclaude/docs_index.py" = ["C901"]
"teleclaude/entrypoints/youtube_sync_subscriptions.py" = ["C901"]
"teleclaude/helpers/youtube_helper/__init__.py" = ["C901"]
"teleclaude/hooks/receiver/__init__.py" = ["C901"]
"teleclaude/hooks/receiver/__main__.py" = ["C901", "E402"]
"teleclaude/output_projection/conversation_projector.py" = ["C901"]
"teleclaude/resource_validation/__init__.py" = ["C901"]
"teleclaude/utils/markdown.py" = ["C901"]
"teleclaude/utils/transcript/*.py" = ["C901"]
"teleclaude/adapters/telegram/input_handlers.py" = ["C901"]
"teleclaude/api/streaming.py" = ["C901"]
"teleclaude/adapters/base_adapter.py" = ["B027"]  # Intentional non-abstract base methods
# guard: ratchet-down — B904 (raise from), B023 (loop vars), E402 (import order), RUF001-003 (unicode)
"teleclaude/cli/config_cli.py" = ["B904"]
"teleclaude/cli/tool_client.py" = ["B904"]
"teleclaude/cli/tool_commands/**" = ["B904"]
"teleclaude/core/integration/lease.py" = ["B904"]
"teleclaude/core/tmux_bridge.py" = ["B904"]
"teleclaude/core/codex_prompt_submit.py" = ["B023", "RUF001", "RUF002", "RUF003"]
"teleclaude/chiptunes/sid_cpu.py" = ["RUF001", "RUF002", "RUF003"]
"teleclaude/chiptunes/sid_parser.py" = ["RUF001", "RUF002", "RUF003"]
"teleclaude/cli/tui/animations/sprites/cars.py" = ["RUF001", "RUF002", "RUF003"]
"tools/verify_deploy.py" = ["RUF001", "RUF002", "RUF003", "B006", "UP035"]
"tools/lint/markdown.py" = ["E402"]

[tool.mypy]
# MAXIMUM STRICTNESS - No Any, no untyped dict/list, no isinstance abuse
python_version = "3.11"
files = ["**/*.py"]
exclude = ["^venv/", "^.venv/"]
follow_imports = "silent"  # TODO: Revisit - changed from "skip" to allow pydantic BaseModel resolution
enable_error_code = ["literal-required"]

# Enable ALL strict mode flags
strict = true
strict_equality = true
no_strict_optional = true

# Additional strictness beyond --strict (ban ALL forms of Any)
disallow_any_unimported = true  # Ban Any from missing imports
disallow_any_expr = true  # Ban Any in expressions (catches isinstance abuse)
disallow_any_decorated = true  # Ban Any from untyped decorators
disallow_any_explicit = true  # Ban explicit Any annotation

# Import handling
disable_error_code = [
  "import-untyped",  # Still allow importing untyped third-party libs
  "func-returns-value",  # Allow functions that only return None (handlers, etc.)
  "no-redef", # Disable redefinition error, due to unreliable behavior in if/elif scopes
]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false  # Allow untyped defs in tests only

[[tool.mypy.overrides]]
module = [
  "teleclaude.api_server",
  "teleclaude.adapters.telegram_adapter",
  "teleclaude.transport.redis_transport",
  "teleclaude.transport.redis_transport.*",
  "teleclaude.hooks.receiver",
  "teleclaude.hooks.receiver.*",
  "teleclaude.utils.transcript",
  "teleclaude.utils.transcript.*",
  "teleclaude.core.agent_parsers",
  "teleclaude.core.codex_watcher",
  "teleclaude.config",
]
disallow_any_expr = false
disallow_any_unimported = false
disallow_any_explicit = false
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = ["teleclaude.transport.redis_transport", "teleclaude.transport.redis_transport.*"]
# Redis client returns Any types that propagate.
disable_error_code = ["misc", "no-any-return", "attr-defined", "explicit-any", "arg-type", "assignment", "override"]

[[tool.mypy.overrides]]
module = "teleclaude.api_server"
# FastAPI decorators and Pydantic models introduce Any-typed boundaries.
disable_error_code = ["misc", "assignment", "arg-type"]

[[tool.mypy.overrides]]
module = [
  "teleclaude.core.command_handlers", "teleclaude.core.command_handlers.*",
  "teleclaude.core.models", "teleclaude.core.models.*",
  "teleclaude.core.db", "teleclaude.core.db.*",
]
# Core data layer: mixin patterns, dynamic typing, SQLModel/SQLAlchemy Any propagation.
# Pre-existing suppression extended to subpackages; no new violations added.
disable_error_code = ["explicit-any", "misc", "arg-type", "assignment", "attr-defined", "no-any-return", "call-overload", "unused-ignore", "return-value", "return", "operator"]

[[tool.mypy.overrides]]
module = "teleclaude.adapters.base_adapter"
disable_error_code = ["misc", "explicit-any", "arg-type"]

[[tool.mypy.overrides]]
module = "teleclaude.core.agent_parsers"
disable_error_code = ["misc", "explicit-any", "arg-type", "assignment"]

[[tool.mypy.overrides]]
module = "teleclaude.hooks.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "teleclaude.core.summarizer"
disable_error_code = ["misc", "explicit-any", "arg-type", "assignment", "unused-ignore"]

[[tool.mypy.overrides]]
module = "teleclaude.cli.tui.*"
# Curses module doesn't have complete type stubs; stdscr methods return Any.
disable_error_code = ["misc", "explicit-any", "arg-type", "unused-ignore"]

[[tool.mypy.overrides]]
module = "teleclaude.cli.api_client"
# httpx resp.json() returns Any.
disable_error_code = ["misc", "no-any-return"]

[[tool.mypy.overrides]]
module = ["teleclaude.utils.transcript", "teleclaude.utils.transcript.*"]
# External JSON payloads are highly dynamic; validate in code instead of types.
disable_error_code = ["misc"]

[[tool.mypy.overrides]]
module = "teleclaude.api.*"
# FastAPI decorators and Pydantic BaseModel have internal Any types.
disable_error_code = ["misc", "explicit-any", "arg-type", "unused-ignore"]

[tool.pylint.'MESSAGES CONTROL']
# CRITICAL: import-outside-toplevel (C0415) is ENABLED and will fail the build
# ALL imports MUST be at the top of the file
enable = ["import-outside-toplevel"]
fail-on = ["import-outside-toplevel"]

[tool.pylint.'SIMILARITIES']
min-similarity-lines = 10  # Flag duplicate blocks of 10+ lines

[tool.pylint.'FORMAT']
max-line-length = 120

[tool.pylint.typecheck]
# Decorators that modify function signatures (inject parameters)
signature-mutators = ["teleclaude.core.command_handlers.with_session"]

[tool.pyproject-fmt]
indent = 4
keep_full_version = false
max_supported_python = "3.14"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
timeout = 1
addopts = [
  "-v",
  "--strict-markers",
  "--strict-config",
  "--tb=short",
  "-n", "4",
]
markers = [
  "unit: Unit tests (fast, isolated, mocked)",
  "integration: Integration tests (slower, real components)",
  "expensive: Tests that call real LLM APIs (excluded from default runs)",
  "timeout: Test timeout marker",
]
asyncio_mode = "auto"
filterwarnings = [
  "ignore::telegram.warnings.PTBDeprecationWarning",
  "ignore:The default datetime adapter is deprecated:DeprecationWarning:aiosqlite",
  "ignore::pytest.PytestUnraisableExceptionWarning",
  "ignore::pytest.PytestUnhandledThreadExceptionWarning",
  "ignore:.*datetime.utcnow.*:DeprecationWarning",
]

[tool.test-mapping]
exclude = [
    "teleclaude/core/metadata.py",       # Pure Pydantic model, no logic
    "teleclaude/logging_config.py",       # Delegates to instrukt_ai_logging
]
# guard: ratchet-down — orphaned tests to rename/restructure; each entry needs a source companion or removal
orphan-exclude = [
    "tests/unit/cli/tui/test_animation_modes.py",             # Tests animation mode switching across TUI animation files
    "tests/unit/cli/tui/test_session_row.py",                 # Tests session row rendering in TUI views
    "tests/unit/core/integration/test_auto_enqueue.py",       # Tests auto-enqueue in state_machine.py
    "tests/unit/core/integration/test_queue_transitions.py",  # Tests queue transitions in state_machine.py
    "tests/unit/core/integration/test_step_delivery_bookkeeping.py", # Tests step_functions.py delivery flow
    "tests/unit/core/integration/test_worktree_guards.py",    # Tests worktree guards in step_functions.py
    "tests/unit/core/next_machine/test_bug_route.py",         # Tests bug routing logic in core.py
    "tests/unit/core/next_machine/test_format_tool_call.py",  # Tests tool call formatting in core.py
    "tests/unit/core/next_machine/test_ghost_artifact.py",    # Tests ghost artifact detection in core.py
    "tests/unit/core/next_machine/test_prepare_staleness.py", # Tests prepare staleness in prepare.py
    "tests/unit/core/next_machine/test_referenced_paths.py",  # Tests referenced paths in core.py
    "tests/unit/core/next_machine/test_review_findings.py",   # Tests review findings in core.py
    "tests/unit/core/next_machine/test_split_inheritance.py",  # Tests split inheritance in core.py
    "tests/unit/core/next_machine/test_stale_review_guard.py", # Tests stale review detection in core.py
    "tests/unit/core/test_agent_coordinator.py",              # Tests agent_coordinator/ package
    "tests/unit/core/test_command_handlers.py",               # Tests command_handlers/ package
    "tests/unit/core/test_db.py",                             # Tests core/db/ package
    "tests/unit/events/test_new_prepare_events.py",           # Tests prepare event flow across event modules
    "tests/unit/test_api_auth.py",                            # Tests teleclaude/api/auth.py (path mismatch)
    "tests/unit/test_principal_inheritance.py",               # Cross-module principal inheritance behavior
    "tests/unit/test_session_token_lifecycle.py",             # Cross-module session token lifecycle
    "tests/unit/test_session_tokens.py",                      # Cross-module session token behavior
    "tests/unit/test_youtube_scraper.py",                     # Tests youtube scraper helpers
]

[tool.coverage.run]
source = ["teleclaude"]
omit = [
  "*/tests/*",
  "*/__pycache__/*",
  "*/.venv/*",
  "*/venv/*",
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "@abstractmethod",
]

[tool.coverage.html]
directory = "coverage/html"

[tool.coverage.xml]
output = "coverage/coverage.xml"

[tool.coverage.json]
output = "coverage/coverage.json"
