[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "teleclaude-events-alpha"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "instrukt-ai-logger @ git+https://github.com/InstruktAI/python-logger.git@v0.3.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["teleclaude_events*"]
